compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_println_two_args.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/println-two-args.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported main body
   ╭─[tests/fixtures/diagnostics/body/println-two-args.ml:2:3]
 1 │ fn main() {
 2 │   println("hello", "world")
   ·   ────────────┬────────────
   ·               ╰── stage0 currently expects main to call println with one string value
 3 │ }
   ╰────
  help: try: fn main() { let name = "Alice"; println(name) }
